public/stylesheets/style.css
/* ... */
#navbar ul {
    list-style-type:none;
    margin:0;
    padding:0;
}
#navbar ul li {
    display:inline-block;
    position:relative;
}

/* sub navigation */
#navbar li ul {
    background-color: rgba(175,10,10,.9);
    position:absolute;
    left:30px;
    top:40px; /* make this equal to the line-height of the links (specified below) */
    width:200px;
}
#navbar li li {
    position:relative;
    margin:0;
    display:block;
}
#navbar li li ul {
    position:absolute;
    top:0;
    left:200px; /* make this equal to the width of the sub nav above */
    margin:0;
    border: 3px solid yellow;
}

/* style all links */
#navbar a {
    line-height:40px;
    padding:0 10px;
    /*margin:0 12px;*/
    color: #af0a0a;
    text-decoration:none;
}

#navbar a:hover,
/*#navbar a:focus,*/
#navbar a:active {
    color: white;
    background: #114fe0;
    background: #3A4766;
    background: rgba(0,53,131, .7);
}

#navbar a:hover:after {
  content: "";
  height: 100%; 
  left: 0; 
  top: 0; 
  width: 0px;  
  position: absolute; 
  transition: all 0.3s ease 0s; 
  -webkit-transition: all 0.3s ease 0s; 
  z-index: -1;
}

/* style sub level links */
#navbar li li a {
    border-bottom:solid 1px rgb(200,50,50);
    /*margin:0 10px;*/
    /*padding:0;*/
    width: 100%;
    text-align: left;
    color: white;
}
#navbar li li:last-child a {
    border-bottom:none;
}

/* hide sub menu links */
ul.sub-menu {
    display:none;
}

span {
  color: #af0a0a;
}
span:hover {
  color: white;
}
#navbar .fa {
  padding-left: 5px;
}
#navbar li {
  color: #af0a0a;
}
nav li, article li {
  list-style: none;
}

nav li:after {
  content: "";
  display: table;
  clear: both;
  background: black;
}
#navbar nav a {
  font-size: 1.1em;
  font-weight: 400;
  margin-left: 20px;
  display: block
}

.logo {
  position: fixed;
  width: 18%;
  top: -55px;
  left: 50px;
  z-index: 10;
}
.navigation {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

  -webkit-flex-flow: row wrap;
  justify-content: flex-end;
}
#hamburger {
  cursor: pointer;
  font-size: 2rem;
  float: right;
  position: fixed;
  right: 50;
  right: 50px;
  top: 20px;
  z-index: 2;
}
#hamburger {
  display: none;
}
.blue {
  color: blue;
  transitiion: all .3s ease;
}

.hide {
  display: none;
}

html {
  font-size: 1em; }

body {
  background-color: #c7d1ea;
  background-image: url("/images/colorado-sunrise.jpg");
  height: 600px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  line-height: 1.45;
  color: #333; }

article a {
  padding: 5px;
  line-height: 1em; }

article {
  width: 100%;
  display: block;
  float: left;
  height: 25px; }

p:after {
  content: "";
  display: table;
  clear: both; }

p:hover {
  color: #114fe0;
}

.mask2 ul li {
  font-size: 1.1em;
  width: 100%;
}
h1, h2, h3, h4 {
  font-weight: inherit;
  line-height: 1.2; }

h6 {
  font-weight: bold; }

h1 {
  color: #af0a0a;
  background: rgba(0,0,0,.7);
  width: 30%;
  padding: 20px;
  margin-top: -100px;
  margin-left: 50px;
  text-align: center;
  font-size: 3em;
  font-family: 'Bad Script', cursive; }

h2 {
  padding: 10px;
  color: white;
  text-align: center;
  margin-left: 50px; }

h3 {
  font-weight: inherit;
  text-transform: uppercase;
  line-height: 1.2;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  padding: 10px;
  width: 25%;
  text-align: center;
  margin: 20px auto;
}
.shopping {
  width: 30%;
}
.reddit {
  width: 35%;
}

h4 {
  float: left;
  padding-left: 50px;
  font-size: 1.25em;
  text-align: center; }

h5 {
  position: relative;
  top: 300px;
  color: #af0a0a;
  width: 100%;
  float: right;
  font-size: 1.2em;
  padding-right: 10px; }

h6 {
  font-weight: normal;
  margin: 0px;
  margin-left: 20px;
  line-height: 1.3em;
  font-size: .7em; }

blockquote {
  padding-left: 60px;
  border-left: #24227F solid 20px;
  margin-bottom: 20px; }

a:after {
  content: "";
  display: table;
  clear: both; }

a:hover, button:hover {
  color: #fff;
  background: #114fe0;
  background: rgba(0,53,131, .8); }

.center {
  text-align: center; }

.center-width96 {
  text-align: center;
  width: 96%;
}

/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
/**
 * 1. Set default font family to sans-serif.
 * 2. Prevent iOS text size adjust after orientation change, without disabling
 *    user zoom.
 */
html {
  font-family: sans-serif;
  /* 1 */
  -ms-text-size-adjust: 100%;
  /* 2 */
  -webkit-text-size-adjust: 100%;
  /* 2 */ }

/**
 * Remove default margin.
 */
body {
  margin: 0; }

/* HTML5 display definitions
   ========================================================================== */
/**
 * Correct `block` display not defined for any HTML5 element in IE 8/9.
 * Correct `block` display not defined for `details` or `summary` in IE 10/11
 * and Firefox.
 * Correct `block` display not defined for `main` in IE 11.
 */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
  display: block; }

/**
 * 1. Correct `inline-block` display not defined in IE 8/9.
 * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
 */
audio,
canvas,
progress,
video {
  display: inline-block;
  /* 1 */
  vertical-align: baseline;
  /* 2 */ }

/**
 * Prevent modern browsers from displaying `audio` without controls.
 * Remove excess height in iOS 5 devices.
 */
audio:not([controls]) {
  display: none;
  height: 0; }

/**
 * Address `[hidden]` styling not present in IE 8/9/10.
 * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
 */
[hidden],
template {
  display: none; }

/* Links
   ========================================================================== */
/**
 * Remove the gray background color from active links in IE 10.
 */
a {
  /*   background-color: transparent;
 */ }
/* ... */

